tests/sources/invalid/classes/class_new_constructor_errors.fire
// Invalid uses of the 'new ClassName(args)' constructor syntax.
import @firescript/std.io.println;

class Box {
    int32 v;

    Box(int32 v) {
        this.v = v;
    }
}

// Wrong argument count
Box b = new Box(5i32, 6i32);  //~ ERROR FS-SEM-0010 @13

// Wrong argument type
Box c = new Box("x");  //~ ERROR FS-SEM-0010 @17

// Unknown type
Nope d = new Nope(1i32);  //~ ERROR FS-PARSE-0012 @14
//~^ ERROR FS-SEM-0010 @14
